# ax-npu-kit-620e

./: .gitignore
ocr/: .gitignore  CMakeLists.txt  README.md  README_OCR_RECOGNITION.md  USAGE_OCR_RECOGNITION.md  build.sh  log.md  ocr_rec.md  test.md  test_ocr_recognition.cpp  test_ocr_recognition.sh
ocr/components/: CMakeLists.txt
ocr/components/letterbox/: CMakeLists.txt  letterbox_component.cpp  letterbox_component.h
ocr/components/ocr_det/: CMakeLists.txt  ocr_det_component.cpp  ocr_det_component.h
ocr/components/ocr_rec/: CMakeLists.txt  ocr_rec_component.cpp  ocr_rec_component.h
ocr/src/: main.cpp  ocr_full_pipeline.cpp
ocr_pipline/: .gitignore  CMakeLists.txt  build.sh  compare.md  memory_analysis.md  optimization_report.md
ocr_pipline/components/: CMakeLists.txt
ocr_pipline/components/ocr_det/: CMakeLists.txt  ocr_det.cpp  ocr_det.h
ocr_pipline/components/ocr_image/: CMakeLists.txt  ocr_image.cpp  ocr_image.h
ocr_pipline/components/ocr_rec/: CMakeLists.txt  ocr_rec.cpp  ocr_rec.h
ocr_pipline/components/result_writer/: CMakeLists.txt  result_writer.cpp  result_writer.h
ocr_pipline/docs/: MCP 服务对接.md
ocr_pipline/image_getting/: CMakeLists.txt
ocr_pipline/ocr_process/: CMakeLists.txt  ocr_process.cpp  todo.md
ocr_pipline/src/: CMakeLists.txt  main.cpp
ocr_pipline/test_rec/: CMakeLists.txt
src/api/: ax_skel_version.h
test/: .gitignore  CMakeLists.txt  README.md  README_LETTERBOX_SW.md  README_OCR_DETECTION.md  USAGE.md  build.sh  get_model_info.cpp  letterbox_resize_sw.cpp  test_jpg_png.sh  test_letterbox_sw.sh  test_ocr_detection.cpp  test_ocr_detection.sh
toolchains/: arm-none-linux-gnueabihf.toolchain.cmake
